Fixed left alignment of the cloudspace navigator + stopped flickering of the dropdown. Ref CLOUD-113

--- a/apps/cloudscalers_fe/base/wiki_gcb/.files/custom.css
+++ b/apps/cloudscalers_fe/base/wiki_gcb/.files/custom.css
@@ -1110,7 +1110,6 @@ color:#ddd;
 
 [persistent-dropdown].dropdown-menu {
     padding: 0;
-    margin-left: -180px;
     width: 406px;
 }
 
